<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ras_bt_framework</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="harsh.davda11@outlook.com">aether</maintainer>
  <license>AGPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake_python</depend>
  <depend>behaviortree_cpp</depend>
  <depend>control_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>ras_interfaces</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
