<?xml version="1.0"?>
<package format="3">
  <name>ras_logging</name>
  <version>0.1.0</version>
  <description>RAS core logging package (Python)</description>
  <maintainer email="info@opensciencestack.org">Harsh Davda</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
